<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/cneset"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button

            android:id="@+id/AM_Buton_Summary"
            android:layout_width="@dimen/button_Dezin_width"
            android:layout_height="@dimen/button_Dezin_height"
            android:background="@drawable/logout_button"
            android:text="@string/AM_Buton_text"
            android:textColor="@color/button_Dezin_text_color"
            android:textSize="@dimen/button_Dezin_text_siz"/>

        <Button

            android:id="@+id/AM_Buton_Delete"
            android:layout_width="@dimen/button_Dezin_width"
            android:layout_height="@dimen/button_Dezin_height"
            android:background="@drawable/logout_button"
            android:text="@string/AM_Buton_delet_text"
            android:textColor="@color/button_Dezin_text_color"
            android:textSize="@dimen/button_Dezin_text_siz"
            android:layout_marginStart="10dp"
           />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <SearchView
           android:id="@+id/AM_SearchView"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:queryHint="@string/AM_text_searchveiw_S"
            android:background="@drawable/searchveiw_border"/>
    </RelativeLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/AM_vP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/am_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.viewpager.widget.ViewPager>


<!--    <FrameLayout-->
<!--        android:id="@+id/am_FramLayot"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--    </FrameLayout>-->


</LinearLayout>